# gbc-reader

./: .gitignore  GBC_Reader_Project_Plan.md  PROJECT_API.md  PROJECT_TREE.md  PUSH_TEST.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: a2-findings.md
docs/tickets/: A-1.md  A-2.md  A-3.md  A-4.md  A-5.md  A-6.md  A-7.md  A-8.md
src/gbc_reader_prep/: __init__.py  book.py  chapters.py  cli.py  cover.py  extract.py  paginate.py  preprocess.py  trim.py
tests/: test_book.py  test_chapters.py  test_cli.py  test_cover.py  test_paginate.py  test_trim.py
